fix carousel alignment

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
   padding: 0;
 }
 
+h3 {
+  margin-top: 50px;
+}
 .brand-logo img {
   margin-top: 10px;
   width: 50px;
@@ -24,11 +27,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 30vh;
 }
 
 .col {
-  width: 50%;
+  width: 100%;
 }
 
 .text-content {
@@ -65,17 +67,12 @@ body {
   height: 100vh;
   padding: 50px 0;
   background-color: #393346;
-  display: flex;
-  align-items: center;
-  justify-content: center; /* Center content horizontally */
 }
 
 .carousel.carousel-slider {
   width: 100%;
   max-width: 60%; /* Limit maximum width to make it smaller than the section */
   margin: 0 auto; /* Center the carousel horizontally within its container */
-  overflow: hidden; /* Hide overflow to prevent horizontal scroll */
-  height: 70vh;
 }
 
 .carousel-item {
@@ -89,6 +86,7 @@ body {
 .carousel-image {
   max-width: 400px;
   height: 400px;
+  margin-bottom: -50px;
 }
 
 .carousel h4 {
@@ -104,10 +102,6 @@ body {
 .card-content,
 .card-reveal {
   height: 150px;
-}
-
-.card {
-  height: auto;
 }
 
 .card-image {
